feat(backend): roleId 改为 Long 类型